templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpfpm-service
  labels:
    chart: appotapay
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: phpfpm-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    chart: appotapay
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-service
  labels:
    chart: appotapay
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-deployment
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalance-service
  labels:
    chart: appotapay
spec:
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-deployment
